Chore: Fix css alignments

--- a/packages/trader/src/sass/app/modules/mt5/cfd.scss
+++ b/packages/trader/src/sass/app/modules/mt5/cfd.scss
@@ -304,12 +304,11 @@
     }
     &__error {
         display: flex;
-        width: 100%;
+        max-width: 38.4rem;
         min-height: 28.4rem;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        padding: 2.4rem 0 2rem;
+        margin: 0 auto;
     }
     &__description {
         @include typeface(--paragraph-left-normal-black);
